--- a/config/services.yaml
+++ b/config/services.yaml
@@ -10,7 +10,9 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
-
+        bind:
+            $imagesDirectory: '%kernel.project_dir%/public/images/'
+            $fontsDirectory: '%kernel.project_dir%/fonts/'
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
